--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
               <div class="member d-flex align-items-start">
                 <div class="pic">
                   <img
-                    src="assets/img/team/team-1.jpg"
+                    src="assets/img/team/team-1.png"
                     class="img-fluid"
                     alt=""
                   />
