--- a/stand.html
+++ b/stand.html
@@ -88,11 +88,11 @@
             <div class="col-lg-5">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-                  <div class="swiper-slide" style="max: width 50%">
+                  <div class="swiper-slide">
                     <img src="assets/img/lomba/stand1.png" alt="" />
                   </div>
 
-                  <div class="swiper-slide" style="width: 50%">
+                  <div class="swiper-slide">
                     <img src="assets/img/lomba/stand2.png" alt="" />
                   </div>
                 </div>
@@ -111,7 +111,9 @@
                   <li><strong>Kuota Stand</strong>: Limited Seat</li>
                   <li>
                     <strong>Contact Person</strong>:
-                    <a href="https://wa.me/6285722929578">🔽 CP Stand BEF 🔽 </a>
+                    <a href="https://wa.me/6285722929578"
+                      >🔽 CP Stand BEF 🔽
+                    </a>
                   </li>
                 </ul>
               </div>
