--- a/lkti.html
+++ b/lkti.html
@@ -214,15 +214,20 @@
               </p>
               <div class="social-links mt-3">
                 <a href="https://line.me/ti/p/XAsdoG8QZP" class="line"
-                  ><i class="bx bxl-telegram"></i
+                  ><i class="bx ri-line-fill"></i
                 ></a>
                 <a href="https://wa.me/6281325614409" class="whatsapp"
                   ><i class="bx bxl-whatsapp"></i
                 ></a>
                 <a
-                  href="https://www.instagram.com/bloraedufair/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+                  href="https://www.instagram.com/bloraedufair"
                   class="instagram"
                   ><i class="bx bxl-instagram"></i
+                ></a>
+                <a
+                  href="https://www.tiktok.com/@blora.edufair"
+                  class="instagram"
+                  ><i class="bx bxl-tiktok"></i
                 ></a>
                 <a
                   href="https://youtube.com/@BloraEduFair?si=1mTr1uRLN69eEYKk"
@@ -245,7 +250,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-          Designed by <a href="https://bootstrapmade.com/">MedfoBEF</a>
+          Designed by <a href="404.html">MedfoBEF</a>
         </div>
       </div>
     </footer>
