--- a/stand.html
+++ b/stand.html
@@ -10,7 +10,7 @@
 
     <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/favicon.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -102,7 +102,7 @@
 
             <div class="col-lg-5">
               <div class="portfolio-info">
-                <h3>Informasi Pendaftaran</h3>
+                <h3 class="blink_me">Informasi Pendaftaran << OPEN >></h3>
                 <ul>
                   <li><strong>Kategori</strong>: Education</li>
                   <li><strong>Kegiatan</strong>: Offline</li>
@@ -219,9 +219,7 @@
                   class="instagram"
                   ><i class="bx bxl-tiktok"></i
                 ></a>
-                <a
-                  href="https://www.youtube.com/@Blora.Edufair"
-                  class="youtube"
+                <a href="https://www.youtube.com/@Blora.Edufair" class="youtube"
                   ><i class="bx bxl-youtube"></i
                 ></a>
               </div>
