--- a/band_competition.html
+++ b/band_competition.html
@@ -38,14 +38,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body>
@@ -87,11 +79,11 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img src="assets/img/lomba/stand1.png" alt="" />
+                    <img src="assets/img/lomba/BEF in Magical.jpg" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="assets/img/lomba/stand2.png" alt="" />
+                    <img src="assets/img/lomba/BEF in Magical.jpg" alt="" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -108,19 +100,44 @@
                   <li><strong>Kegiatan</strong>: Offline</li>
                   <li>
                     <strong>Panduan lomba</strong>:
-                    <a href="">Guidebook BEF In Magical ⏩</a>
+                    <a href="assets/BEF IN MAGICAL GUIDEBOOK.pdf"
+                      >Guidebook BEF In Magical ⏩</a
+                    >
                   </li>
-                  <li><strong>Pendaftaran terakhir</strong>:</li>
+                  <li>
+                    <strong>Pendaftaran terakhir</strong>: 21 Januari 2024
+                  </li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="">🔽 Daftar Sekarang 🔽</a>
+                    <a href="https://tekan.id/PendaftaranBEFinMagical"
+                      >🔽 Daftar Sekarang 🔽</a
+                    >
                   </li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>[BEF In Magical 2024]</h2>
-                <p style="text-align: justify">.....</p>
+                <p style="text-align: justify">
+                  Halloo Beforians <a style="color: red">‼</a>
+                </p>
+                <p style="text-align: justify">
+                  ADA INFO PENTING BUAT KAMU YANG PENCINTA MUSIK<a
+                    style="color: red"
+                    >‼ ‼ 🎶</a
+                  >
+                </p>
+                <p style="text-align: justify">
+                  BEF 2024 akan menyelanggarakan lomba music band dalam acara
+                  BEF IN MAGICAL !!!!! Cocok buat kamu dan teman-teman kamu yang
+                  suka bermusik . Tunggu apalagi nih, segera daftarkan tim
+                  kalian untuk ikut serta dalam BEF IN MAGICAL 2024 dan
+                  mengangkan hadiah total jutaan rupiah✨
+                </p>
                 <p>Yuk, segera daftar!</p>
+                <p style="text-align: right">
+                  CP :
+                  <a href="https://wa.me/85643352349 ">📞 Julian</a>
+                </p>
               </div>
             </div>
           </div>
@@ -226,13 +243,7 @@
           &copy; Copyright <strong><span>BloraEducationFair</span></strong
           >. 2024
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-          Designed by <a href="404.html">MedfoBEF</a>
-        </div>
+        <div class="credits">Designed by <a href="404.html">MedfoBEF</a></div>
       </div>
     </footer>
     <!-- End Footer -->
