--- a/band_competition.html
+++ b/band_competition.html
@@ -109,9 +109,7 @@
                   </li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="https://tekan.id/PendaftaranBEFinMagical"
-                      >🔽 Daftar Sekarang 🔽</a
-                    >
+                    <a href="close.html">🔽 Daftar Sekarang 🔽</a>
                   </li>
                 </ul>
               </div>
@@ -122,10 +120,8 @@
                 </p>
                 <p style="text-align: justify">
                   <b
-                    >ADA INFO PENTING BUAT KAMU YANG PENCINTA MUSIK <a
-                      style="color: red"
-                      >‼ ‼ 🎶</a
-                    ></b
+                    >ADA INFO PENTING BUAT KAMU YANG PENCINTA MUSIK
+                    <a style="color: red">‼ ‼ 🎶</a></b
                   >
                 </p>
                 <p style="text-align: justify">
