--- a/bef_trophy_x_live_class.html
+++ b/bef_trophy_x_live_class.html
@@ -116,7 +116,7 @@
                   <li>
                     <strong>Pendaftaran</strong>:
                     <a
-                      href="https://docs.google.com/forms/d/e/1FAIpQLScdOnuH2STql4jg6DHxNA934dKjZULd2QkQfb2UcbiGZN2mOg/viewform"
+                      href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
