--- a/creative_dance.html
+++ b/creative_dance.html
@@ -108,7 +108,7 @@
                   </li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="https://tekan.id/PendaftaranCreativeDanceBEF24"
+                    <a href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
