--- a/essay.html
+++ b/essay.html
@@ -106,7 +106,7 @@
                   <li>
                     <strong>Pendaftaran</strong>:
                     <a
-                      href="https://tekan.id/PendaftaranEssayCompetitionBEF2024"
+                      href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
