--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     <li><a href="donasi_buku.html">Donasi Buku</a></li>
                     <li><a href="lkti.html">Lomba KTI</a></li>
                     <li><a href="essay.html">Lomba Essay</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                   </ul>
                 </li>
               </ul>
@@ -128,7 +129,7 @@
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started scrollto">Get Started</a>
               <a
-                href="https://youtu.be/hcX2s6dIaVo"
+                href="https://youtu.be/TRgpZn927zA?si=uqcZfYljHOzd3djZ"
                 class="glightbox btn-watch-video"
                 ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
               >
