--- a/lkti.html
+++ b/lkti.html
@@ -111,7 +111,7 @@
                   <li>
                     <strong>Pendaftaran</strong>:
                     <a
-                      href="https://docs.google.com/forms/d/1gLdsHQTzmi1qSf1ZewHr2RLQMmYrgarcdic9V0jYWAs/viewform?hl=id&hl=id&edit_requested=true"
+                      href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
