--- a/rangking_1.html
+++ b/rangking_1.html
@@ -105,7 +105,7 @@
                   </li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="https://tekan.id/RANKING1BloraEducationFair2024"
+                    <a href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
