--- a/donasi_buku.html
+++ b/donasi_buku.html
@@ -100,7 +100,7 @@
                   </li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="https://tekan.id/pendaftarandonasibukuBEF.2024"
+                    <a href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
