--- a/fotography.html
+++ b/fotography.html
@@ -101,7 +101,7 @@
                   <li><strong>Pendaftaran terakhir</strong>:</li>
                   <li>
                     <strong>Pendaftaran</strong>:
-                    <a href="">🔽 Daftar Sekarang 🔽</a>
+                    <a href="close.html">🔽 Daftar Sekarang 🔽</a>
                   </li>
                 </ul>
               </div>
