--- a/lcc_sma.html
+++ b/lcc_sma.html
@@ -107,7 +107,7 @@
                   <li>
                     <strong>Pendaftaran</strong>:
                     <a
-                      href="https://docs.google.com/forms/d/e/1FAIpQLSdWbkZR9p0vNdqVttZq86YoASUeUBErxMsSuBmSZkDM2U1rSQ/viewform"
+                      href="close.html"
                       >🔽 Daftar Sekarang 🔽</a
                     >
                   </li>
